<resources>
    <string name="app_name">Raf Dnevnjak</string>
    <string name="username">username</string>
    <string name="email" translatable="false">email</string>
    <string name="email_missing">email missing</string>
    <string name="username_missing">username missing</string>
    <string name="password">password</string>
    <string name="password_missing">password missing</string>
    <string name="Login">login</string>
    <string name="calendar">calendar</string>
    <string name="tasks">tasks</string>
    <string name="user">user</string>
    <string name="change_password">change password</string>
    <string name="logout">logout</string>
    <string name="new_password">new password</string>
    <string name="missing_password">missing password</string>
    <string name="confirm_change">confirm change</string>
    <string name="cancel">cancel</string>
    <string name="repeat_password">repeat password</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="show_past_tasks">Show past tasks</string>
    <string name="low">low</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="create">create</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search_obligations">Search obligations</string>
</resources>